Configure defaults for job run directory
Added defaults for run configuration with working directory.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: code
+
     steps:
       - uses: actions/checkout@v4
 
@@ -18,10 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           if [ -f package-lock.json ]; then
-            echo "Using npm ci"
             npm ci
           else
-            echo "Using npm install"
             npm install
           fi
 
