--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,13 +18,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
+          cache: 'npm'
+          cache-dependency-path: code/package-lock.json
 
-      - name: Install dependencies
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
+      - run: npm ci
 
       - run: npm run docs:build
